--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -61,7 +61,7 @@
                 <h6><i class="fas fa-info-circle"></i> Быстрые действия:</h6>
                 <div class="mt-2">
                     <a href="{{ url_for('book.index_view') }}" class="btn btn-primary btn-sm">Управление книгами</a>
-                    <a href="{{ url_for('user.index_view') }}" class="btn btn-secondary btn-sm">Пользователи</a>
+                    <a href="{{ url_for('users.index_view') }}" class="btn btn-secondary btn-sm">Пользователи</a>
                     <a href="{{ url_for('order.index_view') }}" class="btn btn-success btn-sm">Заказы</a>
                     <a href="{{ url_for('author.index_view') }}" class="btn btn-warning btn-sm">Авторы</a>
                 </div>
